fixing long dash issue

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="block">
 			<div class="tbl-cell">
 				<div class="tbl-in">
-					<strong class="ttl">Enterprise-Level Service — Without the Cost.</strong>
+					<strong class="ttl">Enterprise-Level Service &mdash; Without the Cost.</strong>
 					<p>Why are more companies switching to us? We offer the same reliability and performance at a third of the price.</p>
 					<div class="state-1">
 						<a href="#" class="btn btn-test">Test our performance</a>
@@ -132,7 +132,7 @@
 				<p>We are one of the fastest CDNs in the industry, but speed is nothing without control.<br/>We offer on-demand purging (cache invalidation) and provisioning, a fully documented and supported API and a robust suite of security features. We stand behind our CDN with<br/>24/7/365 support at a competitive price.</p>
 				<strong class="large-heading orange">Reliability</strong>
 				<h2 class="heading">100% SLA</h2>
-				<p>Our redundant infrastructure and network are so reliable, we provide a 100% SLA to every enterprise client — for example, we use multiple upstream and DNS providers.</p>
+				<p>Our redundant infrastructure and network are so reliable, we provide a 100% SLA to every enterprise client &mdash; for example, we use multiple upstream and DNS providers.</p>
 				<h2 class="heading">Low Error Rates</h2>
 				<p>We make sure your content is delivered using an Anycast network with Dyn and DNS Made Easy<br/>that minimizes packet loss. Packet loss means a slower connection. Slower connections means lost conversions and unhappy customers and users. Our error rates are among the lowest in the industry, according to Cedexis.</p>
 			</article>
@@ -195,8 +195,8 @@
 		<article class="content">
 			<div class="perfomance-info" id="performance">
 				<h2 class="orange large-heading">Performance</h2>
-				<p>Our servers feature Nginx — known for its high performance, stability, rich feature set, simple configuration, and low resource consumption — and 100% SSDs in North America, Europe and Asia, connected to the internet with multiple 10 Gigabit ports.</p>
-				<p>Our redundant upstream providers includes GTT (which provides coverage in 24 countries) and Zayo (which provides coverage in seven countries); our 600 peering partners cover 90 countries and include AT&amp;T, Level 3, Time-Warner Cable, Cox, Comcast, Vodaphone and Rogers, among many others. Our response times consistently comes in at about 39ms according to Cedexis — but don't take our word for it. Use your own tools to test our speed. We know you'll be pleasantly surprised.</p>
+				<p>Our servers feature Nginx &mdash; known for its high performance, stability, rich feature set, simple configuration, and low resource consumption &mdash; and 100% SSDs in North America, Europe and Asia, connected to the internet with multiple 10 Gigabit ports.</p>
+				<p>Our redundant upstream providers includes GTT (which provides coverage in 24 countries) and Zayo (which provides coverage in seven countries); our 600 peering partners cover 90 countries and include AT&amp;T, Level 3, Time-Warner Cable, Cox, Comcast, Vodaphone and Rogers, among many others. Our response times consistently comes in at about 39ms according to Cedexis &mdash; but don't take our word for it. Use your own tools to test our speed. We know you'll be pleasantly surprised.</p>
 			</div><!-- /perfomance-info -->
 			<div class="tab-area" id="tabs-1">
 				<ul class="tabset">
@@ -258,22 +258,22 @@
 				<div class="slide slide-current">
 					<div class="img"><img src="images/img-28.png" alt="image description"></div>
 					<strong class="name">Instant Purge</strong>
-					<p>Traditional CDNs find it acceptable to purge your cache in half an hour— we don't. Your cache will be purged in 30 seconds or less with us.</p>
+					<p>Traditional CDNs find it acceptable to purge your cache in half an hour&mdash; we don't. Your cache will be purged in 30 seconds or less with us.</p>
 				</div>
 				<div class="slide slide-next">
 					<div class="img"><img src="images/img-29.png" alt="image description" ></div>
 					<strong class="name">Instant Provisioning</strong>
-					<p>If you're waiting half an hour — or more — to provision your zone, talk to us. We'll have you up and running in minutes.</p>
+					<p>If you're waiting half an hour &mdash; or more &mdash; to provision your zone, talk to us. We'll have you up and running in minutes.</p>
 				</div>
 				<div class="slide" style="display:none;">
 					<div class="img"><img src="images/img-30.png" alt="image description" ></div>
 					<strong class="name">Powerful REST API</strong>
-					<p>Our REST API is fully documented and fully featured —  because it was built for us, by us. When you have questions, we have answers.</p>
+					<p>Our REST API is fully documented and fully featured &mdash;  because it was built for us, by us. When you have questions, we have answers.</p>
 				</div>
 				<div class="slide" style="display:none;">
 					<div class="img"><img src="images/img-31.png" alt="image description" ></div>
 					<strong class="name">Custom SSL</strong>
-					<p>Custom SSLs are a pain for traditional CDNs, taking up to a week and requiring an engineer. Our installation takes seconds — upload a certificate through the control panel or API, with no engineer required.</p>
+					<p>Custom SSLs are a pain for traditional CDNs, taking up to a week and requiring an engineer. Our installation takes seconds &mdash; upload a certificate through the control panel or API, with no engineer required.</p>
 				</div>
 				<a href="#" class="btn-prev">prev</a>
 				<a href="#" class="btn-next">next</a>
@@ -302,7 +302,7 @@
 				<li>
 					<span class="ico ico-3">&nbsp;</span>
 					<strong class="name">EdgeSSL</strong>
-					<p>Our SSL certificates take seconds to provision and uses our optimized TCP stack, ciphers and hardware — which utilizes Intel Integrated Performance Primitives (IPP), for a 35 percent boost in SSL performance. It is delivered using our network of edge servers. We can also support your existing certificates or have us provision a certificate for you with one click.</p>
+					<p>Our SSL certificates take seconds to provision and uses our optimized TCP stack, ciphers and hardware &mdash; which utilizes Intel Integrated Performance Primitives (IPP), for a 35 percent boost in SSL performance. It is delivered using our network of edge servers. We can also support your existing certificates or have us provision a certificate for you with one click.</p>
 				</li>
 				<li>
 					<span class="ico ico-4">&nbsp;</span>
@@ -323,7 +323,7 @@
 			<article class="content" id="support">
 				<strong class="large-heading orange">Support</strong>
 				<h2 class="heading">Engineer Access</h2>
-				<p>We're sure the tech support you and your team needs is something beyond rebooting your laptop or turning it off and on. You'll have access to one of our engineers — not a level one rep reading from a script — who'll work with you to ensure your service works flawlessly with our CDN.</p>
+				<p>We're sure the tech support you and your team needs is something beyond rebooting your laptop or turning it off and on. You'll have access to one of our engineers &mdash; not a level one rep reading from a script &mdash; who'll work with you to ensure your service works flawlessly with our CDN.</p>
 				<h2 class="heading">Dedicated Account Rep</h2>
 				<p>Never play phone tag again with a faceless, anonymous billing or accounts department. You'll be serviced by a single representative who knows your account and who will give you the personal service you deserve. You'll have access to them via their mobile number, Skype and GTalk.</p>
 				<h2 class="heading">24/7 Support</h2>
@@ -471,7 +471,7 @@
 	<div class="hidden-popup">
 		<div class="popup" id="popup-contact">
 			<strong class="orange large-heading">Ready for Your Test Drive?</strong>
-			<p>Please fill out the form below, we'll give you a call to set up your free seven day enterprise trial.<br/>Try us out. See how fast we are for yourself. Give us a support call — you'll have access to priority support. We're sure that our service and performance will exceed your expectations.</p>
+			<p>Please fill out the form below, we'll give you a call to set up your free seven day enterprise trial.<br/>Try us out. See how fast we are for yourself. Give us a support call &mdash; you'll have access to priority support. We're sure that our service and performance will exceed your expectations.</p>
 			<form method="post" enctype="application/x-www-form-urlencoded" action="http://resources.netdna.com/index.php/leadCapture/save">
 				<input type="hidden" name="lpId" value="-1" />
 				<input type="hidden" name="subId" value="127" />
