--- a/pricing/index.html
+++ b/pricing/index.html
@@ -143,7 +143,7 @@
 		<div class="holder">
 			<div class="heading-block">
 				<h2 class="orange large-heading">How Much for How Much?</h2>
-				<p>Between our fast connectivity and blazing servers, 24/7/365 priority support, fully documented and supported REST API and powerful — but easy to use — control panel, there's a lot to like at MaxCDN. We're also sure you'll be pleasantly surprised with our competitive pricing.</p>
+				<p>Between our fast connectivity and blazing servers, 24/7/365 priority support, fully documented and supported REST API and powerful &mdash; but easy to use &mdash; control panel, there's a lot to like at MaxCDN. We're also sure you'll be pleasantly surprised with our competitive pricing.</p>
 			</div>
 			<div class="price-form">
 				<form action="#">
@@ -249,7 +249,7 @@
 		<div class="heading-block">
 			<strong class="orange large-heading">Free Trial</strong>
 			<h2 class="heading">Seven Days, No Commitment. Pinkie Swear.</h2>
-			<p>You've worked with other CDNs, but do their mediocre support, slow purging and high rates get to you? Try us out for a week — seven full days, 168 hours... you get the point. Test our response times with your own performance service or software. See for yourself how our control panel and REST API is easy to use and powerful. Once you try us out, you'll see why MaxCDN Enterprise is the best choice.</p>
+			<p>You've worked with other CDNs, but do their mediocre support, slow purging and high rates get to you? Try us out for a week &mdash; seven full days, 168 hours... you get the point. Test our response times with your own performance service or software. See for yourself how our control panel and REST API is easy to use and powerful. Once you try us out, you'll see why MaxCDN Enterprise is the best choice.</p>
 		</div>
 		<div class="cols">
 			<div class="col">
@@ -297,10 +297,10 @@
 			<div class="col">
 				<h3>Why Give MaxCDN a Spin?</h3>
 				<ul class="simple-list">
-					<li>Competitive, flat rate pricing — worldwide</li>
+					<li>Competitive, flat rate pricing &mdash; worldwide</li>
 					<li>Instant provisioning, purging and SSL installation, unlike traditional CDNs</li>
 					<li>A robust, yet easy to use, control panel and API</li>
-					<li>24/7/365 priority support, even on major holidays — yes, including Taco Tuesdays</li>
+					<li>24/7/365 priority support, even on major holidays &mdash; yes, including Taco Tuesdays</li>
 					<li>An average of 39ms response time, as reported by Cedexis</li>
 				</ul>
 			</div>
@@ -327,7 +327,7 @@
 						<dt>I'm not sure if I qualify as an "enterprise" customer. Can I talk to someone about my needs?</dt>
 						<dd>Of course. Contact us at 1-877-629-236, in the US, or +1-323-313-1206 internationally to speak to an account executive. Or email and chat with us through this link (link to contact page). We'll work with you to make sure you get the best price and service for your specific needs.</dd>
 						<dt>I push a lot of traffic. Can your CDN still support my needs?</dt>
-						<dd>We overprovision hardware, we use half of our bandwidth capacity and we constantly upgrade our network to ensure we always have more than enough breathing room for unexpected traffic spikes. That's why most of our customers come from the 800 pound gorillas in the industry — and we're ready for more.</dd>
+						<dd>We overprovision hardware, we use half of our bandwidth capacity and we constantly upgrade our network to ensure we always have more than enough breathing room for unexpected traffic spikes. That's why most of our customers come from the 800 pound gorillas in the industry &mdash; and we're ready for more.</dd>
 					</dl>
 				</div>
 			</div>
@@ -417,7 +417,7 @@
 	<div class="hidden-popup">
 		<div class="popup" id="popup-contact">
 			<strong class="orange large-heading">Ready for Your Test Drive?</strong>
-			<p>Please fill out the form below, we'll give you a call to set up your free seven day enterprise trial.<br/>Try us out. See how fast we are for yourself. Give us a support call — you'll have access to priority support. We're sure that our service and performance will exceed your expectations.</p>
+			<p>Please fill out the form below, we'll give you a call to set up your free seven day enterprise trial.<br/>Try us out. See how fast we are for yourself. Give us a support call &mdash; you'll have access to priority support. We're sure that our service and performance will exceed your expectations.</p>
 			<form method="post" enctype="application/x-www-form-urlencoded" action="http://resources.netdna.com/index.php/leadCapture/save">
 				<input type="hidden" name="lpId" value="-1" />
 				<input type="hidden" name="subId" value="127" />
