--- a/success/index.html
+++ b/success/index.html
@@ -170,7 +170,7 @@
 	<div class="hidden-popup">
 		<div class="popup" id="popup-contact">
 			<strong class="orange large-heading">Ready for Your Test Drive?</strong>
-			<p>Please fill out the form below, we'll give you a call to set up your free seven day enterprise trial.<br/>Try us out. See how fast we are for yourself. Give us a support call — you'll have access to priority support. We're sure that our service and performance will exceed your expectations.</p>
+			<p>Please fill out the form below, we'll give you a call to set up your free seven day enterprise trial.<br/>Try us out. See how fast we are for yourself. Give us a support call &mdash; you'll have access to priority support. We're sure that our service and performance will exceed your expectations.</p>
 			<form method="post" enctype="application/x-www-form-urlencoded" action="http://resources.netdna.com/index.php/leadCapture/save">
 				<input type="hidden" name="lpId" value="-1" />
 				<input type="hidden" name="subId" value="127" />
