updated legal links

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -348,10 +348,10 @@
 
 				<h3 class="orange">Legal</h3>
 				<ul class="list">
-					<li><a href="http://www.netdna.com/terms-of-service/">Legal Terms</a></li>
-					<li><a href="http://www.netdna.com/privacy-policy/">Privacy Policy</a></li>
-					<li><a href="http://www.netdna.com/dmca/">DMCA	</a></li>
-					<li><a href="http://www.netdna.com/acceptable-use-policy/">AUP</a></li>
+					<li><a href="http://www.maxcdn.com/legal/terms/">Legal Terms</a></li>
+					<li><a href="http://www.maxcdn.com/legal/privacy/">Privacy Policy</a></li>
+					<li><a href="http://www.maxcdn.com/legal/dmca/">DMCA	</a></li>
+					<li><a href="http://www.maxcdn.com/legal/aup/">AUP</a></li>
 				</ul>
 			</div>
 			<div class="col">
