--- a/index.html
+++ b/index.html
@@ -36,9 +36,104 @@
 	  _kms('//i.kissmetrics.com/i.js');
 	  _kms('//doug1izaerwt3.cloudfront.net/' + _kmk + '.1.js');
 </script>
+<link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 </head>
 
 <body>
+
+	<!-- Orange right slider -->
+	<div class="orange-slider">
+		<div class="icons">
+			<a id="questionbox-side-chatbutton" href="#chat"><i class="icon-comments"></i></a>
+			<a id="questionbox-side-phonebutton" href="#phone"><i class="icon-phone"></i></a>
+			<a id="questionbox-side-emailbutton" href="#email"><i class="icon-envelope-alt"></i></a>
+		</div>
+		<div class="text alignleft">QUESTIONS?</div>
+	</div>
+	<div class="slider-content hidden">
+		<div class="slider-chat hidden">
+			<h2 class="no-bottom-space textcenter">LIVE CHAT</h2>
+			<h3 class="no-top-space no-bottom-space textcenter orange-text">AVAILABLE 24/7</h3>
+			<p class="textcenter">We're here to answer your questions. From the simple to the hard. Just ask us!</p>
+			<div class="textcenter">
+				<a id="questionbox-side-chatnowbutton" href="#" onclick="return startWidget('chat');" class="button orange textcenter">CHAT NOW</a>
+			</div>
+		</div>
+		<div class="slider-phone hidden">
+			<h2 class="no-bottom-space textcenter">TALK TO US</h2>
+			<h3 class="no-top-space no-bottom-space textcenter orange-text">AVAILABLE 24/7</h3>
+			<p class="textcenter">
+				Want to speak to someone? We're here 24/7 to answer any questions. Just call!<br/><br/>
+				<span class="large"><strong><span class="phone-number">1 (877) 629-2361</span></strong></span>
+			</p>
+		</div>
+		<div class="slider-email hidden">
+			<form id="form-contact-orange-slider" method="post" enctype="application/x-www-form-urlencoded" action="http://resources.netdna.com/index.php/leadCapture/save">
+				<input name="LeadSource" type="hidden" value="MaxCDN.com">
+				<input name="Lead_Source_Detail__c" type="hidden" value="MaxCDN Contact Us Form">
+				<input type="hidden" name="lpId" value="-1" />
+				<input type="hidden" name="subId" value="127" />
+				<input type="hidden" name="kw" value="" />
+				<input type="hidden" name="cr" value="" />
+				<input type="hidden" name="searchstr" value="" />
+				<input name="content__c" type='text' value="" class="hidden" />
+				<input type="hidden" name="_mkt_disp" value="return" />
+				<input type="hidden" name="_mkt_trk" value="" />
+				<input type="hidden" name="lpurl" value="http://resources.netdna.com/MaxCDNContactUs.html?cr={creative}&kw={keyword}" />
+				<input type="hidden" name="formid" value="15" />
+				<input type="hidden" name="returnURL" value="https://enterprise.maxcdn.com/success/" />
+				<input type="hidden" name="retURL" value="https://enterprise.maxcdn.com/success/" />
+				<input name="URL_of_Lead_Source__c" type='hidden' value="https://enterprise.maxcdn.com/" />
+
+				<div class="column sixty">
+					<div class="padding">
+						<h2 class="no-bottom-space">TALK TO US</h2>
+						<ul>
+							<li>
+								<label for="FirstName">First Name</label>
+								<input class="required" type="text" name="FirstName" />
+								<div class="clearfix"></div>
+							</li>
+							<li>
+								<label for="LastName">Last Name</label>
+								<input class="required" type="text" name="LastName" />
+								<div class="clearfix"></div>
+							</li>
+							<li>
+								<label for="Email">Email Address</label>
+								<input class="required" type="email" name="Email" />
+								<div class="clearfix"></div>
+							</li>
+							<li>
+								<label for="Phone">Phone Number</label>
+								<input type="text" name="Phone" />
+								<div class="clearfix"></div>
+							</li>
+							<li>
+								<label for="Website">Website</label>
+								<input class="required" type="url" value="http://" name="Website" />
+								<div class="clearfix"></div>
+							</li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="column fourty last">
+					<div class="padding">
+						<label for="text" class="textarea">How can we help you?</label>
+						<textarea class="required" name="Contact_Form_Message__c"></textarea>
+						<div class="textright">
+							<input type="submit" class="button orange" value="SEND" />
+						</div>
+					</div>
+				</div>
+			</form>
+
+			<div class="clearfix"></div>
+		</div>
+	</div>
+
+
 	<div class="top-area">
 		<header id="header">
 			<div class="holder">
@@ -48,7 +143,7 @@
 							<li class="active"><a href="/">HOME</a></li>
 							<li><a href="/pricing/">PRICING</a></li>
 							<li><a href="/pricing/#calc">CALCULATOR</a></li>
-							<li><a href="#popup-contact" class="fancybox">CONTACT</a></li>
+							<li><a href="#popup-contact" class="fancybox">FREE TRIAL</a></li>
 						</ul>
 					</nav>
 					<a href="#popup-contact" class="fancybox"><strong class="phone"><span class="replace-number">+1 (877) 629-2361</span></strong></a>
@@ -61,46 +156,7 @@
 				<div class="tbl-in">
 					<strong class="ttl">Enterprise-Level Service &mdash; Without the Cost.</strong>
 					<p>Why are more companies switching to us? We offer the same reliability and performance at a third of the price.</p>
-					<div class="state-1">
-						<a href="#" class="btn btn-test">Test our performance</a>
-					</div>
-					<div class="state-2" style="display:none;">
-						<div class="test-form">
-							<form method="post" enctype="application/x-www-form-urlencoded" action="http://resources.netdna.com/index.php/leadCapture/save">
-								<input type="hidden" name="lpId" value="-1" />
-								<input type="hidden" name="subId" value="127" />
-								<input type="hidden" name="kw" value="" />
-								<input type="hidden" name="cr" value="" />
-								<input type="hidden" name="searchstr" value="" />
-								<input type="hidden" name="_mkt_disp" value="return" />
-								<input type="hidden" name="_mkt_trk" value="" />
-								<input name="content__c" type='text' value="" class="hidden" />
-								<input name="LeadSource" type="hidden" value="MaxCDN.com">
-								<input name="Lead_Source_Detail__c" type="hidden" value="MaxCDN Testing Form">
-								<input type="hidden" name="lpurl" value="http://resources.netdna.com/Testing_MaxCDNContactUs.html?cr={creative}&kw={keyword}" />
-								<input type="hidden" name="formid" value="109" />
-								<input type="hidden" name="returnURL" value="https://enterprise.maxcdn.com/success/" />
-								<input type="hidden" name="retURL" value="https://enterprise.maxcdn.com/success/" />
-								<input name="URL_of_Lead_Source__c" type='hidden' value="https://enterprise.maxcdn.com/" />
-
-								<div class="in">
-									<div class="frame">
-										<label>URL of the file <span>(must be under 2Mb)</span>:</label>
-										<input class="text required" type="website" name="Website" value="http://" data-value="http://">
-									</div>
-									<div class="frame">
-										<label>Your email <span>(to send the report to):</span></label>
-										<input class="text required" type="email" name="Email">
-									</div>
-									<input class="btn btn-submit" type="submit" value="Get Your Speed Report">
-								</div>
-							</form>
-						</div>
-					</div>
-					<div class="state-3" style="display:none;">
-						<strong class="ttl">Your results are on the way!</strong>
-						<p>Give us between 36 to 48 hours to put together a sample for your report. It will be emailed to you as soon as possible.</p>
-					</div>
+					<a href="#popup-test" class="fancybox btn btn-test">Test our performance</a>
 				</div>
 			</div>
 		</div><!-- /block -->
@@ -145,40 +201,7 @@
 					<li><a href="#support">SUPPORT<span class="ico ico-5">&nbsp;</span></a></li>
 					<li><a href="#pricing">PRICING<span class="ico ico-6">&nbsp;</span></a></li>
 				</ul>
-				<div class="testing-form">
-
-					<form method="post" enctype="application/x-www-form-urlencoded" action="http://resources.netdna.com/index.php/leadCapture/save">
-						<input type="hidden" name="lpId" value="-1" />
-						<input type="hidden" name="subId" value="127" />
-						<input type="hidden" name="kw" value="" />
-						<input type="hidden" name="cr" value="" />
-						<input type="hidden" name="searchstr" value="" />
-						<input type="hidden" name="_mkt_disp" value="return" />
-						<input type="hidden" name="_mkt_trk" value="" />
-						<input name="content__c" type='text' value="" class="hidden" />
-						<input name="LeadSource" type="hidden" value="MaxCDN.com">
-						<input name="Lead_Source_Detail__c" type="hidden" value="MaxCDN Testing Form">
-						<input type="hidden" name="lpurl" value="http://resources.netdna.com/Testing_MaxCDNContactUs.html?cr={creative}&kw={keyword}" />
-						<input type="hidden" name="formid" value="109" />
-						<input type="hidden" name="returnURL" value="https://enterprise.maxcdn.com/success/" />
-						<input type="hidden" name="retURL" value="https://enterprise.maxcdn.com/success/" />
-						<input name="URL_of_Lead_Source__c" type='hidden' value="https://enterprise.maxcdn.com/" />
-
-						<h3 class="orange">TEST OUR PERFORMANCE</h3>
-						<p>Need convincing? We'll make you a believer. Give us a file from your server or current CDN. We'll run a Catchpoint test and send you the results, ASAP!</p>
-						<div class="group">
-							<label>URL of a FILE <span>(must be under 2MB):</span></label>
-							<input class="text required" type="text" name="Website" value="http://" data-value="http://">
-						</div>
-						<div class="group">
-							<label>Your email <span>(to send the report to):</span></label>
-							<input class="text required" type="email" name="Email">
-						</div>
-						<div class="btn-holder">
-							<input class="btn-submit" type="submit" value="get the speed report">
-						</div>
-					</form>
-				</div>
+				<a href="#popup-test" class="fancybox btn-speedreport">get the speed report</a>
 				<a href="#" class="btn-chat" onclick="return startWidget('chat');">chat online</a>
 			</aside>
 		</div><!-- /main-holder -->
@@ -327,7 +350,7 @@
 				<h2 class="heading">Dedicated Account Rep</h2>
 				<p>Never play phone tag again with a faceless, anonymous billing or accounts department. You'll be serviced by a single representative who knows your account and who will give you the personal service you deserve. You'll have access to them via their mobile number, Skype and GTalk.</p>
 				<h2 class="heading">24/7 Support</h2>
-				<p>As an enterprise client, we include 24/7/365 priority support. You'll have direct access to our NOC at any time. An emergency email address and phone number will be provided and will always be monitored. That includes Thanksgiving, Christmas, New Year's Eve, New Year's, The Fourth of July...no fine print, no asterisks.</p>
+				<p>As an enterprise client, we include 24/7/365 priority support. You'll have direct access to our top-tier support at any time. An emergency email address and phone number will be provided and will always be monitored. That includes Thanksgiving, Christmas, New Year's Eve, New Year's, The Fourth of July...no fine print, no asterisks.</p>
 			</article>
 		</div>
 	</div><!-- /support-info -->
@@ -527,6 +550,59 @@
 				<button type="submit" class="btn btn-submit">Request Free Trial</a>
 			</form>
 		</div><!-- /popup -->
+
+		<div class="popup" id="popup-test">
+			<strong class="orange large-heading">Test MaxCDN against your<br/>current solution for free</strong>
+			<p>We will provide you with a third party test ran by Catchpoint; it will measure your current CDN versus MaxCDN from different locations around the world. Once the test is completed, we'll provide a report which shows how they both performed. It can take up to 48 hours to send you the report.</p>
+
+			<form method="post" enctype="application/x-www-form-urlencoded" action="http://resources.netdna.com/index.php/leadCapture/save">
+				<input type="hidden" name="lpId" value="-1" />
+				<input type="hidden" name="subId" value="127" />
+				<input type="hidden" name="kw" value="" />
+				<input type="hidden" name="cr" value="" />
+				<input type="hidden" name="searchstr" value="" />
+				<input type="hidden" name="_mkt_disp" value="return" />
+				<input type="hidden" name="_mkt_trk" value="" />
+				<input name="content__c" type='text' value="" class="hidden" />
+				<input name="LeadSource" type="hidden" value="MaxCDN.com">
+				<input name="Lead_Source_Detail__c" type="hidden" value="MaxCDN Testing Form">
+				<input type="hidden" name="lpurl" value="http://resources.netdna.com/Testing_MaxCDNContactUs.html?cr={creative}&kw={keyword}" />
+				<input type="hidden" name="formid" value="109" />
+				<input type="hidden" name="returnURL" value="https://enterprise.maxcdn.com/success/" />
+				<input type="hidden" name="retURL" value="https://enterprise.maxcdn.com/success/" />
+				<input name="URL_of_Lead_Source__c" type='hidden' value="https://enterprise.maxcdn.com/" />
+
+				<div class="cols">
+					<div class="col">
+						<div class="trial-form custom-form">
+							<label>Email Address</label>
+							<input class="text required" type="email" name="Email" >
+							<label>Phone Number (optional)</label>
+							<input class="text " type="text" name="Phone" >
+							<label>URL of a file (2mb or under)</label>
+							<input class="text required" type="text" name="Website" placeholder="http://your-company.com/file.pdf">
+							<label>Your Monthly Bandwidth Usage</label>
+							<select class="required" name="NetDNA_Usage_Selection__c" tabindex="6">
+								<option value="Select Bandwidth" selected="selected">Select Bandwidth</option>
+								<option value="Under 5TB">Under 5TB</option>
+								<option value="5TB - 10TB">5TB - 10TB</option>
+								<option value="11 - 100TB">11 - 100TB</option>
+								<option value="101TB - 1,000TB">101TB - 1,000TB</option>
+								<option value="1PB+">1PB+</option>
+							</select>
+						</div>
+					</div>
+					<div class="col">
+						<h3>How will this test help you?</h3>
+						<ul class="simple-list">
+							<li><strong>You can save money</strong>! If you're spending $5,000 on CDN now, we'll offer the same performance and reliability for $1,500.</li>
+							<li><strong>You get real data</strong>, from a 3rd party (Catchpoint), to help drive your decisions.</li>
+						</ul>
+					</div>
+				</div>
+				<button type="submit" class="btn btn-submit">Get Your Speed Report</a>
+			</form>
+		</div><!-- /popup -->
 	</div>
 	<script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="js/jquery.plugins.min.js"></script>
@@ -561,5 +637,23 @@
 	})();
 	</script>
 	
+	<script type="text/javascript">
+	adroll_adv_id = "DZPY6TZDGBGEJFB7JCH7ML";
+	adroll_pix_id = "DGK76G7V2VE7PKFLGTES5N";
+	(function () {
+	var oldonload = window.onload;
+	window.onload = function(){
+	   __adroll_loaded=true;
+	   var scr = document.createElement("script");
+	   var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com");
+	   scr.setAttribute('async', 'true');
+	   scr.type = "text/javascript";
+	   scr.src = host + "/j/roundtrip.js";
+	   ((document.getElementsByTagName('head') || [null])[0] ||
+	    document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
+	   if(oldonload){oldonload()}};
+	}());
+	</script>
+
 	</body>
 </html>
